# DatyreDB

./: .clang-format  .clang-tidy  .dockerignore  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build.bat  build.sh  build_output.txt  crash_smoke_db  datyre.wal  docker-compose.yml  docker-control.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_buffer_pool.cpp  bench_page.cpp  bench_storage_engine.cpp
cmake/: 1  CompilerFlags.cmake  DatyreDB.cmake  DatyreDBBuildOptions.cmake  DatyreDBCompiler.cmake  DatyreDBCompilerOptions.cmake  DatyreDBConfig.cmake.in  DatyreDBDependencies.cmake  DatyreDBInstall.cmake  DatyreDBPackaging.cmake  DatyreDBSanitizers.cmake  DatyreDBTargets.cmake  Dependencies.cmake  Sanitizers.cmake  Testing.cmake  datyredb.pc.in
example_data/: data.db
examples/: CMakeLists.txt  embedded_usage.cpp
include/datyredb/: database.h  server.h  status.h  table.h
include/datyredb/commands/: icommand.h
include/datyredb/network/: 1  connection.h  http_server.h  server.h  session.h  telegram_bot.h  thread_pool.h  types.h
include/datyredb/sql/: ast.h  lexer.h  parser.h  token.h
src/: CMakeLists.txt  config.hpp.in  config.rs  main.cpp  version.hpp.in
src/_engine_backup/: database.cpp
src/buffer/: buffer_pool.cpp  buffer_pool.h
src/common/: type.hpp  types.h
src/core/: Table.cpp  database.cpp  database.hpp  engine.hpp  query_executor.cpp  query_executor.hpp  query_result.cpp  query_result.hpp  storage_engine.cpp  storage_engine.hpp  table.cpp  table.hpp
src/datyredb/: config.hpp.in  datyredb.hpp  status.hpp  version.hpp.in
src/datyredb/commands/: icommand.hpp
src/db/: database.cpp  database.h
src/engine/: database.hpp
src/internal/core/: database.cpp  query_executor.cpp  storage_engine.cpp  storage_engine.hpp  table.cpp
src/internal/storage/: buffer_pool.cpp  buffer_pool.hpp  checkpoint.cpp  checkpoint.hpp  disk_manager.cpp  disk_manager.hpp  page.cpp  page.hpp  types.hpp  wal.cpp  wal.hpp
src/internal/utils/: logger.cpp  logger.hpp
src/network/: connection.cpp  connection.hpp  dispatcher.cpp  dispatcher.hpp  http_server.cpp  http_server.hpp  server.cpp  server.h  server.hpp  session.cpp  session.hpp  telegram_bot.cpp  telegram_bot.hpp  thread_pool.cpp
src/network/commands/: create_command.cpp
src/sql/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/storage/: buffer_pool.cpp  buffer_pool.hpp  checkpoint.cpp  checkpoint.hpp  disk_manager.cpp  disk_manager.h  disk_manager.hpp  page.cpp  page.hpp  storage_types.hpp  wal.cpp  wal.h  wal.hpp
src/tests/: crash_recovery_smoke.cpp
src/utils/: logger.cpp  logger.hpp
tests/: CMakeLists.txt  run_audit.sh
tests/sql/: lexer_test.cpp  parser_test.cpp
tests/unit/: test_buffer_pool.cpp  test_checkpoint.cpp  test_core.cpp  test_page.cpp  test_storage_engine.cpp  test_wal.cpp
